<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="hu.bme.aut.moblab.memories.viewmodel.AddMemoryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvModalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/add_a_new_memory"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_of_the_memory"
            app:layout_constraintBottom_toTopOf="@+id/etMemoryTitle"
            app:layout_constraintStart_toStartOf="@+id/etMemoryTitle" />
        <EditText
            android:id="@+id/etMemoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Title"
            android:ems="10"
            android:inputType="text"
            android:text="@={viewModel.title}"
            app:layout_constraintBottom_toTopOf="@+id/etMemoryDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvModalTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_of_the_memory"
            app:layout_constraintBottom_toTopOf="@+id/etMemoryDescription"
            app:layout_constraintStart_toStartOf="@+id/etMemoryDescription" />
        <EditText
            android:id="@+id/etMemoryDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="5"
            android:text="@={viewModel.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvModalTitle"
            tools:ignore="SpeakableTextPresentCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btDismiss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/btRetrofitAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_retrofit" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>